--- a/composer.json
+++ b/composer.json
@@ -20,12 +20,19 @@
     "prefer-stable": true,
     "require": {
         "php": "^7.4",
-        "foxy/foxy": "^1.0"
+        "cycle/orm": "^1.2",
+        "foxy/foxy": "^1.0",
+        "maileryio/mailery-web": "dev-master",
+        "maileryio/widget-dataview": "dev-master",
+        "maileryio/widget-search": "dev-master",
+        "yiisoft/router": "^3.0@dev",
+        "yiisoft/yii-cycle": "^3.0@dev"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.0",
         "phan/phan": "^2.4",
-        "friendsofphp/php-cs-fixer": "^2.16"
+        "friendsofphp/php-cs-fixer": "^2.16",
+        "yiisoft/composer-config-plugin": "dev-master"
     },
     "autoload": {
         "psr-4": {
