--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "php": "^7.4",
         "cycle/orm": "^1.2",
         "foxy/foxy": "^1.0",
+        "maileryio/mailery-brand": "dev-master",
         "maileryio/mailery-web": "dev-master",
         "maileryio/widget-dataview": "dev-master",
         "maileryio/widget-search": "dev-master",
@@ -55,6 +56,7 @@
         },
         "config-plugin": {
             "params": "config/params.php",
+            "common": "config/common.php",
             "web": "config/web.php"
         }
     },
