--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         "cycle/orm": "^1.2",
         "foxy/foxy": "^1.0",
         "maileryio/mailery-brand": "dev-master",
+        "maileryio/mailery-common": "dev-master",
         "maileryio/mailery-web": "dev-master",
         "maileryio/widget-dataview": "dev-master",
         "maileryio/widget-search": "dev-master",
