--- a/composer.json
+++ b/composer.json
@@ -26,9 +26,7 @@
         "maileryio/mailery-common": "dev-master",
         "maileryio/mailery-web": "dev-master",
         "maileryio/widget-dataview": "dev-master",
-        "maileryio/widget-search": "dev-master",
-        "yiisoft/router": "^3.0@dev",
-        "yiisoft/yii-cycle": "^3.0@dev"
+        "maileryio/widget-search": "dev-master"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.0",
